# triforces

./: .gitignore  README.md  pyproject.toml
src/triforces/: __init__.py  normalizers.py  train.py
src/triforces/augmentations/: __init__.py  crystal.py  graph_crop.py  shared_params.py  spatial.py
src/triforces/cli/: main.py  train_contrastive.py
src/triforces/configs/: __init__.py  train_contrastive.yaml  train_contrastive_orb.yaml  train_contrastive_orb_barlow.yaml  train_supervised.yaml
src/triforces/configs/collate/: esen.yaml  mace.yaml  orb.yaml  simple.yaml  uma.yaml
src/triforces/configs/contrastive/: default.yaml
src/triforces/configs/dataset/: asedb.yaml  atompack.yaml  cif.yaml  contrastive_bulk.yaml  lemat_bulk.yaml
src/triforces/configs/dataset/atompack/: matpes_pbe.yaml  matpes_r2scan.yaml  mp_aloe.yaml  mptrj.yaml  omat_train.yaml  omat_val.yaml
src/triforces/configs/head/contrastive/: barlow_twins.yaml  classification.yaml  simclr.yaml  (+4 more)
src/triforces/configs/logger/: wandb.yaml
src/triforces/configs/loss/: barlow_twins.yaml  contrastive.yaml  reconstruction_lejepa.yaml  supervised.yaml
src/triforces/configs/loss_normalization/: lematbulk_ls.yaml
src/triforces/configs/model/: triforces_esen.yaml  triforces_mace.yaml  triforces_orb.yaml  triforces_orb_barlow.yaml
src/triforces/configs/trainer/: default.yaml
src/triforces/core/: utils.py
src/triforces/data/: __init__.py  ase_contrastive.py  asedb_dataset.py  atompack_dataset.py  graph_collate.py  lemat_bulk.py  pairs.py  pyg_collate.py  simple_graph.py
src/triforces/datasets/: __init__.py  contrastive.py
src/triforces/evaluation/: __init__.py  linear_probe.py  metrics.py
src/triforces/evaluation/hooks/: __init__.py  base.py  factory.py  linear_probe.py  supervised_eval.py
src/triforces/losses/: __init__.py  barlow_twins.py  base.py  contrastive.py  dino.py  ibot.py  lejepa.py  reconstruction.py  simsiam.py  supervised.py
src/triforces/models/: __init__.py  adapter_model.py  base.py  composition_stream.py  graph_build.py  mlp.py  model_outputs.py  normalization.py  outputs.py  structural_stream.py  triforces.py  utils.py
src/triforces/models/heads/: __init__.py  barlow_twins.py  byol.py  classification.py  direct.py  ibot.py  simclr.py  split_barlow_twins.py  supervised.py
src/triforces/models/interaction/: esen.py  mace.py  orb.py
src/triforces/utils/: __init__.py  stress.py
tests/: __init__.py  test_adapter_model.py  test_asedb_dataset.py  test_asedb_hf.py  test_atompack_dataset.py  test_atompack_hf.py  test_checkpoint_dir_resolution.py  test_cli_main.py  test_config_model_instantiation.py  test_contrastive_dataset.py  test_graph_collate.py  test_head_configs.py  test_hydra_config_composition.py  test_interaction_transforms.py  test_legacy_removal.py  test_lejepa_loss.py  test_lemat_bulk_dataset.py  test_linear_probe.py  test_loss_configs.py  test_model_connections.py  test_normalizers.py  test_reconstruction_loss.py  test_simple_graph_transform.py  test_stress_utils.py  test_supervised_eval_hook.py  test_supervised_heads.py  test_supervised_loss.py  test_train_batch_stats.py  test_train_checkpointing.py  test_train_contrastive_atompack_config.py  test_train_contrastive_config.py  test_train_debug_logging.py  test_train_hooks_factory.py  test_train_lr_logging.py  test_train_model_collate_compat.py  test_train_standalone_smoke.py  test_train_strict_interface.py  test_train_wandb_init.py
(+18 files in other folders)
