[project]
name = "triforces"
version = "0.1.0"
description = "Pre-training framework for atomistic graph neural networks"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "rich>=13.9.4",
    "torch>=2.1.0",
    "tqdm>=4.67.1",
    "pandas>=2.2.3",
    "pymatgen>=2024.11.13",
    "datasets>=3.2.0",
    "lightning>=2.5.0.post0",
    "mlflow>=2.20.1",
    "ase>=3.24.0",
    "torch_geometric>=2.4.0",
    "setuptools",
    "ijson>=3.3.0",
    "pynvml>=12.0.0",
    "psutil>=6.1.1",
    "lmdb>=1.6.2",
    "ase-db-backends>=0.10.0",
    "cython>=3.0.12",
    "wandb>=0.21.0",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.19.7",
    "torch-tb-profiler>=0.4.3",
    "neptune-scale>=0.16.0",
    "neptune-fetcher>=0.16.0",
    "seaborn>=0.13.2",
]

[project.scripts]
triforces = "triforces.cli.train_contrastive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "ruff>=0.7.1",
    "pytest>=8.3",
    "pre-commit>=4.0.1",
    "requests>=2.32.3",
    "ipykernel>=7.1.0",
]

find-links = [
  "https://data.pyg.org/whl/torch-2.7.0+cpu.html",
  "https://data.pyg.org/whl/torch-2.6.0+cu124.html",
  "https://data.pyg.org/whl/torch-2.4.0+cu124.html",
  "https://data.pyg.org/whl/torch-2.1.0+cu121.html",
]

conflicts = [
    [
        { extra = "fairchem" },
        { extra = "fairchem2" },
        { extra = "mace" },
        { extra = "orb" }
    ],
    [
        { extra = "fairchem" },
        { extra = "matbench" }
    ]
]

[project.optional-dependencies]
fairchem = [
    "fairchem-core>=1.4.0",
    "e3nn>=0.5.0",
    "numpy==1.26.4",
    "torch==2.4.0",
    "torch_geometric==2.4.0",
    "pyg-lib==0.4.0+pt24cu124; sys_platform != 'darwin'",
    "torch_scatter==2.1.2+pt24cu124; sys_platform != 'darwin'",
    "torch-sparse==0.6.18+pt24cu124; sys_platform != 'darwin'",
    "torch-cluster==1.6.3+pt24cu124; sys_platform != 'darwin'",
    "torch-spline-conv==1.2.2+pt24cu124; sys_platform != 'darwin'",
]

fairchem2 = [
    "fairchem-core>=2.3.0",
    "e3nn>=0.5.0",
]

mace = [
    "mace-torch==0.3.13",
    "e3nn==0.4.4",
    "numpy==2.2.3",
    "torch==2.6.0",
    "cuequivariance-torch>=0.6.0",
    # Linux dependencies
    "torch_scatter==2.1.2+pt26cu124; sys_platform != 'darwin'",
    "torch-sparse==0.6.18+pt26cu124; sys_platform != 'darwin'",
    "torch-cluster==1.6.3+pt26cu124; sys_platform != 'darwin'",
    "torch-spline-conv==1.2.2+pt26cu124; sys_platform != 'darwin'",
]

matbench = [
    "matbench-discovery @ git+https://github.com/janosh/matbench-discovery.git@b5a5b226df8ccae524a901f255c9ccc2754def05",
    "moyopy>=0.4.2",
    "phono3py>=3.15.0",
]

orb = [
    "orb-models>=0.5.1",
]

sweeps = [
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "wandb>=0.21.0",
]

mlip-arena = [
    "mlip-arena>=0.1.2",
    "seaborn>=0.13.2",
    "pymatgen>=2025.6.14",
    "phonopy>=2.43.1",
    "mp_api>=0.45.8",
    "ase<3.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/triforces"]
include = ["src/triforces/configs/**"]

[tool.hatch.build.targets.sdist]
include = ["src/triforces/configs/**", "src/**", "README.md", "pyproject.toml"]

[tool.ruff.lint]
extend-select = ["I"]
